--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,8 @@
     "@stripe/stripe-react-native": "0.28.0",
     "date-fns": "^2.30.0",
     "expo": "~49.0.13",
+    "expo-av": "~13.4.1",
+    "expo-barcode-scanner": "~12.5.3",
     "expo-file-system": "~15.4.5",
     "expo-image": "~1.3.5",
     "expo-image-picker": "~14.3.2",
@@ -26,12 +28,13 @@
     "expo-media-library": "~15.4.1",
     "expo-status-bar": "~1.6.0",
     "expo-updates": "~0.18.17",
-    "lottie-react-native": "5.1.6",
+    "lottie-react-native": "^5.1.6",
     "moment": "^2.29.4",
     "moment-timezone": "^0.5.43",
     "react": "18.2.0",
     "react-color-log": "^1.0.12",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.48.2",
     "react-moment": "^1.1.3",
     "react-native": "0.72.6",
     "react-native-dropdown-picker": "^5.4.6",
@@ -60,8 +63,7 @@
     "react-redux": "^8.1.3",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
-    "expo-av": "~13.4.1",
-    "expo-barcode-scanner": "~12.5.3"
+    "rn-credit-card": "^1.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
