--- a/client/app.json
+++ b/client/app.json
@@ -34,6 +34,7 @@
       [
         "@stripe/stripe-react-native",
         {
+          "merchantIdentifier": "",
           "enableGooglePay": true
         }
       ]
