--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/bottom-tabs": "^6.5.9",
     "@react-navigation/native": "^6.1.8",
     "@react-navigation/native-stack": "^6.9.14",
+    "@stripe/stripe-js": "^2.2.0",
     "@stripe/stripe-react-native": "0.28.0",
     "date-fns": "^2.30.0",
     "expo": "~49.0.13",
