--- a/client/package.json
+++ b/client/package.json
@@ -4,8 +4,8 @@
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
@@ -19,16 +19,20 @@
     "@stripe/stripe-react-native": "0.28.0",
     "date-fns": "^2.30.0",
     "expo": "~49.0.13",
+    "expo-auth-session": "~5.0.2",
     "expo-av": "~13.4.1",
     "expo-barcode-scanner": "~12.5.3",
+    "expo-crypto": "~12.4.1",
     "expo-file-system": "~15.4.5",
     "expo-image": "~1.3.5",
     "expo-image-picker": "~14.3.2",
     "expo-linear-gradient": "~12.3.0",
     "expo-location": "~16.1.0",
     "expo-media-library": "~15.4.1",
+    "expo-splash-screen": "~0.20.5",
     "expo-status-bar": "~1.6.0",
     "expo-updates": "~0.18.17",
+    "i18next": "^23.7.7",
     "lottie-react-native": "^5.1.6",
     "moment": "^2.29.4",
     "moment-timezone": "^0.5.43",
@@ -36,12 +40,14 @@
     "react-color-log": "^1.0.12",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.48.2",
+    "react-i18next": "^13.5.0",
     "react-moment": "^1.1.3",
     "react-native": "0.72.6",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-dropdownalert": "^5.1.0",
     "react-native-flip-card": "^3.5.7",
     "react-native-gesture-handler": "~2.12.0",
+    "react-native-i18n": "^2.0.15",
     "react-native-image-picker": "^7.0.0",
     "react-native-image-slider-box": "^2.0.7",
     "react-native-internet-connection-alert": "^0.1.9",
@@ -64,7 +70,8 @@
     "react-redux": "^8.1.3",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
-    "rn-credit-card": "^1.0.4"
+    "rn-credit-card": "^1.0.4",
+    "@expo/webpack-config": "^19.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
